Changelog
=========

1.4.7 (unreleased)
------------------

- Nothing changed yet.


1.4.6 (2016-04-14)
------------------

- Fix styling for multi level navigation.
  [Kevin Bieri]


1.4.5 (2016-04-11)
------------------

- Apply compatibility for ftw.theming.
  [Kevin Bieri]

1.4.4 (2016-03-16)
------------------

- Improve accessibility of mobile buttons.
  [Kevin Bieri]

- Improve accessiblity by setting hiddenstructure link text for slide and slideback for slide navi.
  [mathias.leimgruber]


1.4.3 (2015-08-27)
------------------

- Use applyPrefix for css
  [tschanzt]

- Make slide navigation scrollable if necessary to view all menu items.
  [Daniel Jowett]


1.4.2 (2015-06-16)
------------------

- Updated jQuery "live" for "on", fallback for older versions included.
  [agitator]


1.4.1 (2015-02-27)
------------------

- Load spinner relative to site root.
  This fixes a BadRequest when in portal_factory.
  [jone]


1.4.0 (2015-02-24)
------------------

- Fix bug when theme has no mobilesupport.
  [Kevin Bieri]

- Add errorhandling for loading subnavigation.
  [Kevin Bieri]

- Implement level-depth independence.
  [Kevin Bieri]

- Replace doubled code in plonetheme.onegov
  [Kevin Bieri]

- Add title to mobilebutton when description is not present.
  For accessibility reasons, title attribute on element can't be empty.
  [Kevin Bieri]


1.3.1 (2014-10-24)
------------------

- Fixed class lost after resizing on tabs
  [Kevin Bieri]


1.3.0 (2014-06-02)
------------------

- List parent navigation on default pages.
  [jone]

- Do not list default pages in navigation.
  [jone]

- Added invisible title to mobile buttons, to improve accessibility.
  [Julian Infanger]

- Add uninstall profile.
  [deif]


1.2.3 (2014-04-29)
------------------

- Escape HTML chars in mobile navigation.
  [Julian Infanger]


1.2.2 (2014-04-15)
------------------

- Append "/view" to objects url if they are in the
  'typesUseViewActionInListings' property.
  [Julian Infanger]
