@@ -4,7 +4,8 @@ Changelog
 1.4.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Show toplevel actions in mobile navigation.
+  [mathias.leimgruber]
 
 
 1.4.6 (2016-04-14)
